--- a/V16/lit.bib
+++ b/V16/lit.bib
@@ -45,3 +45,22 @@
   url = {http://www.uniterra.de/rutherford/tab_iong.htm},
   urldate = {2018-11-20}
 }
+
+@online{lambda,
+  author = {},
+  title = {Zerfallskonstate Am},
+  url = {http://www.periodensystem-online.de/index.php?id=isotope&el=95&mz=241&show=nuklid},
+  urldate = {2018-12-27}
+}
+@online{luft,
+  author = {},
+  title = {Eigenschaften Luft},
+  url = {http://www.periodensystem.info/elemente/sauerstoff},
+  urldate = {2019-01-08}
+}
+@online{molluft,
+  author = {},
+  title = {Molmasse Luft},
+  url = http://www.pci.tu-bs.de/aggericke/PC5/Kap_IV/Bestandteile.htm},
+  urldate = {2019-01-08}
+}
